data is showing up in console.log as it should

--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -27,8 +27,8 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div class="article">
-          <h2>Correlations between Health Risks, Age, and Income</h2>
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+          <h2>Correlations among Health Risks</h2>
+          <p>How do poverty rate, medin income, age, healthcare coverage, obesity, and smoking correlate with one another by state in the U.S.? </p>
 
           <p>Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
             ultricies mi vitae est.</p>
@@ -39,34 +39,9 @@
     </div>
   </div>
 
-
-</div>
-<div class="row">
-    <div class="col-md-12">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                  <td>state</td>
-                  <td>poverty rate</td>
-                  <td>median age</td>
-                  <td>median income</td>
-                  <td>pct w/o healthcare coverage</td>
-                  <td>pobesity rate</td>
-                  <td>pct who smoke</td>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-    </div>
-</div>
-</div>
-
-
-
-
   <!-- Footer-->
   <div id="footer">
-    <p>sources: 2014 <a href="https://data.census.gov/cedsci">U.S. Census Population Estimate</a> and 2014 <a href="https://www.cdc.gov/brfss/annual_data/annual_data.htm">Behavioral Risk Factor Surveillance System</a></p>
+    <p>sources: 2014 <a href="https://data.census.gov/cedsci">U.S. Census Population Estimate</a><br><a href="https://www.cdc.gov/brfss/annual_data/annual_data.htm">Behavioral Risk Factor Surveillance System</a></p>
     <p>Data Analytics and Visualization Boot Camp: HW16</p>
     <br>
   </div>
