making variables for axes

--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -28,7 +28,7 @@
       <div class="col-xs-12  col-md-9">
         <div class="article">
           <h2>Correlations among Health Risks</h2>
-          <p>How do poverty rate, medin income, age, healthcare coverage, obesity, and smoking correlate with one another by state in the U.S.? </p>
+          <p>In 2014, how did poverty rate, median income, age, healthcare coverage, obesity, and smoking correlate with one another by state in the U.S.? </p>
 
           <p>Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
             ultricies mi vitae est.</p>
@@ -41,7 +41,7 @@
 
   <!-- Footer-->
   <div id="footer">
-    <p>sources: 2014 <a href="https://data.census.gov/cedsci">U.S. Census Population Estimate</a><br><a href="https://www.cdc.gov/brfss/annual_data/annual_data.htm">Behavioral Risk Factor Surveillance System</a></p>
+    <p>sources: <a href="https://data.census.gov/cedsci">U.S. Census Population Estimate</a><br><a href="https://www.cdc.gov/brfss/annual_data/annual_data.htm">Behavioral Risk Factor Surveillance System</a></p>
     <p>Data Analytics and Visualization Boot Camp: HW16</p>
     <br>
   </div>
