--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>D3 challenge: HW16</title>
+  <title>HW16: D3</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/d3Style.css">
@@ -14,34 +14,38 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12">
-        <h1>D3Times</h1>
+        <h2><i>DDD</i></h2>
       </div>
     </div>
-    <div class="row">
-      <div class="col-xs-12  col-md-9">
-        <div id="scatter">
-          <!-- We append our chart here. -->
-        </div>
-      </div>
-    </div>
+
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div class="article">
-          <h2>Correlations among Health Risks</h2>
-          <p>In 2014, how did poverty rate, median income, age, healthcare coverage, obesity, and smoking correlate with one another by state in the U.S.? </p>
+          <h3>Correlations among Health Risks</h3>
+          <p>In 2014, how did poverty rate and access to healthcare coverage correlate with one another by state in the U.S.?</p>
+        </div> <!--article-->
+      </div>   <!--col-->
+    </div>     <!--row-->
 
-          <p>Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est.</p>
-
-          <p>Mauris placerat eleifend leo.</p>
-        </div>
-      </div>
-    </div>
-  </div>
+    <div class="row">
+      <div class="col-xs-12  col-md-9">
+        <div id="tbody">
+          <!-- Our table ends up here. -->
+        </div> <!--svg-area-->
+      </div>   <!--col-->
+    </div>     <!--row-->
+  </div>       <!--container-->
 
   <!-- Footer-->
   <div id="footer">
-    <p>sources: <a href="https://data.census.gov/cedsci">U.S. Census Population Estimate</a><br><a href="https://www.cdc.gov/brfss/annual_data/annual_data.htm">Behavioral Risk Factor Surveillance System</a></p>
+    <p>sources: <a href="https://data.census.gov/cedsci" target="_blank">U.S. Census Population Estimate</a><br><a href="https://www.cdc.gov/brfss/annual_data/annual_data.htm">Behavioral Risk Factor Surveillance System</a></p>
+
+    <p><a href="https://www.w3schools.com/JSREF/DEFAULT.ASP" target="_blank">w3schools JavaScript</a></p>
+
+    <p><a href="https://d3js.org/" target="_blank">d3js.org</a></p>
+
+    <p><a href="https://observablehq.com/@d3/gallery" target="_blank">d3 examples</a></p>
+
     <p>Data Analytics and Visualization Boot Camp: HW16</p>
     <br>
   </div>
