--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -46,6 +46,8 @@
 
     <p><a href="https://observablehq.com/@d3/gallery" target="_blank">d3 examples</a></p>
 
+    <p><a href="https://github.com/papadiscobravo/D3-challenge" target="_blank">GitHub repo</a></p>
+
     <p>Data Analytics and Visualization Boot Camp: HW16</p>
     <br>
   </div>
