--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -48,7 +48,8 @@
 
     <p><a href="https://github.com/papadiscobravo/D3-challenge" target="_blank">GitHub repo</a></p>
 
-    <p>Data Analytics and Visualization Boot Camp: HW16</p>
+    <p>Data Analytics and Visualization Boot Camp <a href="https://umn.bootcampcontent.com/University-of-Minnesota-Boot-Camp/uofm-stp-data-pt-12-2020-u-c/tree/master/02-Homework/16-D3/Instructions
+      " target="_blank">HW16</a></p>
     <br>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
