additional comments in HTML

--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -30,8 +30,8 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div id="tbody">
-          <!-- Our table ends up here. -->
-        </div> <!--svg-area-->
+          <!-- Our graphic ends up here. -->
+        </div> <!--tbody-->
       </div>   <!--col-->
     </div>     <!--row-->
   </div>       <!--container-->
