--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -39,17 +39,19 @@
 
 <!-- Footer-->
   <div id="footer">
-    <p>sources: <a href="https://data.census.gov/cedsci" target="_blank">U.S. Census Population Estimate</a><br><a href="https://www.cdc.gov/brfss/annual_data/annual_data.htm">Behavioral Risk Factor Surveillance System</a></p>
+    <p>data sources: <a href="https://data.census.gov/cedsci" target="_blank">U.S. Census Population Estimate</a><br><a href="https://www.cdc.gov/brfss/annual_data/annual_data.htm">Behavioral Risk Factor Surveillance System</a></p>
 
-    <p><a href="https://www.w3schools.com/JSREF/DEFAULT.ASP" target="_blank">w3schools JavaScript</a></p>
+    <p>.</p>
 
-    <p><a href="https://d3js.org/" target="_blank">d3js.org</a></p>
+    <p>references: <a href="https://www.w3schools.com/JSREF/DEFAULT.ASP" target="_blank">w3schools JS</a> | <a href="https://d3js.org/" target="_blank">d3js.org</a> |
+    <a href="https://observablehq.com/@d3/gallery" target="_blank">d3 examples</a> | BootCamp <a href="https://umn.bootcampcontent.com/University-of-Minnesota-Boot-Camp/uofm-stp-data-pt-12-2020-u-c/tree/master/01-Lesson-Plans/16-D3">Activities</a>
+    
+    </p>
 
-    <p><a href="https://observablehq.com/@d3/gallery" target="_blank">d3 examples</a></p>
+    <p>.</p>
 
-    <p><a href="https://github.com/papadiscobravo/D3-challenge" target="_blank">GitHub repo</a></p>
-
-    <p>Data Analytics and Visualization Boot Camp <a href="https://umn.bootcampcontent.com/University-of-Minnesota-Boot-Camp/uofm-stp-data-pt-12-2020-u-c/tree/master/02-Homework/16-D3/Instructions
+    <p>coursework: <a href="https://github.com/papadiscobravo/D3-challenge" target="_blank">GitHub repo</a> |
+    Data Analytics and Visualization Boot Camp <a href="https://umn.bootcampcontent.com/University-of-Minnesota-Boot-Camp/uofm-stp-data-pt-12-2020-u-c/tree/master/02-Homework/16-D3/Instructions
       " target="_blank">HW16</a></p>
     <br>
   </div>
