--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -44,7 +44,7 @@
     <p>.</p>
 
     <p>references: <a href="https://www.w3schools.com/JSREF/DEFAULT.ASP" target="_blank">w3schools JS</a> | <a href="https://d3js.org/" target="_blank">d3js.org</a> |
-    <a href="https://observablehq.com/@d3/gallery" target="_blank">d3 examples</a> | BootCamp <a href="https://umn.bootcampcontent.com/University-of-Minnesota-Boot-Camp/uofm-stp-data-pt-12-2020-u-c/tree/master/01-Lesson-Plans/16-D3">Activities</a>
+    d3 <a href="https://observablehq.com/@d3/gallery" target="_blank">examples</a> | BootCamp <a href="https://umn.bootcampcontent.com/University-of-Minnesota-Boot-Camp/uofm-stp-data-pt-12-2020-u-c/tree/master/01-Lesson-Plans/16-D3">Activities</a>
     
     </p>
 
